http/style/leek.css
#unregister-tournament {
	display: none;
}

#top-panel {
	margin-bottom: 10px;
}

#top-panel .column {
	display: inline-block;
	vertical-align: top;
	width: 33.33%;
	margin-right: -4px;
}

#leek-image {
	text-align: center;
}
#leek-image.my-leek {
	cursor: pointer;
}

/*
 * Caractéristiques
 */
#leek-page #stats {
	padding: 0;
	padding-top: 10px;
	text-align: center;
}

#leek-page #stats > table {
	width: 100%;
	margin-bottom: 20px;
}

#leek-page #stats > table tr:nth-child(even) {
	background: white;
}

#leek-page #stats td {
	text-align: center;
}

#leek-page #stats .stat {
	width: 110px;
	padding: 5px 0;
	text-align: left;
	display: inline-block;
}

#leek-page #stats img {
	vertical-align: top;
	margin-right: 7px;
	width: 25px;
}

#leek-page #stats .stat > div > span {
	font-size: 18px;
	vertical-align: top;
	display: inline-block;
	margin-top: 2px;
	font-weight: 500;
}

.tooltip .effect, .tooltip .capital, .tooltip .base-life, .tooltip .added-life {
	font-size: 13px;
}



/*
 * Popup capital
 */
.popup.capital_popup .content .charac {
	padding: 10px 0;
	width: 187px;
	display: inline-block;
}

.popup.capital_popup .capital {
	color: white;
	font-size: 18px;
	background: #5FAD1B;
	display: inline-block;
	padding: 5px 10px;
}
.popup.capital_popup .capital[v='0'] {
	background: #888;
}

.popup.capital_popup .sup {
	color: #555;
}

.popup.capital_popup .content img {
	float: left;
	width: 40px;
	margin-right: 10px;
}

.popup.capital_popup .add {
	vertical-align: top;
	width: 20px;
	height: 27px;
	background-image: url('../image/add.png');
	cursor: pointer;
	opacity: 0.5;
	user-select: none;
	-moz-user-select: -moz-none;
    -ms-user-select: none;
	-webkit-user-select: none;
}

.popup.capital_popup .add[q='10'] {
	width: 25px;
	background-image: url('../image/add10.png');
}
.popup.capital_popup .add[q='100'] {
	width: 30px;
	background-image: url('../image/add100.png');
}

.popup.capital_popup .add.locked {
	cursor: auto;
	opacity: 0.2;
}

.popup.capital_popup .add:hover {
	opacity: 1;
}

.popup.capital_popup .add.locked:hover {
	opacity: 0.2;
}

.popup.capital_popup .content .charac span {
	font-size: 19px;
	vertical-align: top;
	display: inline-block;
	margin-top: 2px;
	font-weight: 500;
}


/*
 * Potions
 */
#potions {
	margin: 15px;
}

#potions .potion {
	display: inline-block;
	position: relative;
}

#potions .potion .duration {
	background: #aaa;
	border-radius: 3px;
	font-weight: bold;
	color: white;
	position: absolute;
	bottom: 0px;
	right: 0px;
	font-size: 13px;
	padding: 0 2px;
}

#add-potion {
	margin-top: 10px;
}

#leek-page h4.level {
	font-size: 20px;
}

#bar {
	width: 100%;
	height: 10px;
	margin-top: 5px;
	background: white;
	border: 1px solid #ddd;
	position:relative;
}

#xp-bar {
	height: 10px;
	background: #30BB00;
	display: inline-block;
	vertical-align: top;
	position:absolute;
}

#xp-bar.blue {
	background: #008FBB;
}

#talent {
	font-size: 23px;
	color: #555;
	display: inline-block;
	font-weight: 300;
	margin-top: 10px;
}

#talent:before {
	background-image: url('../image/talent.png');
	width: 28px;
	height: 28px;
	margin-right: 6px;
	content: " ";
	display: inline-block;
	vertical-align: middle;
	margin-bottom: 4px;
}

#leek-page #talent-more {
	display: inline-block;
	font-weight: 300;
	font-size: 18px;
	margin-left: 5px;
	margin-top: 13px;
	vertical-align: top;
	color: #888;
}

#leek-page #fights {
	margin-top: 10px;
	width: 100%;
	border-collapse: collapse;
	text-align: center;
}

#leek-page #fights .big {
	font-size: 21px;
	font-weight: 300;
	color: #555;
}
#leek-page #fights .grey {
	color: #999;
}

#talent-history {
	margin-top: 3px;
	margin-left: -10px;
	margin-right: -4px;
	margin-bottom: -16px;
	position: relative;
}

#leek-page #talent-history .ct-line {
	stroke: rgba(95,173,27,0.7);
	stroke-width: 2px;
}

#leek-page #talent-history .ct-line:hover {
	stroke-width: 5px;
}

#leek-page #talent-history .ct-point {
	stroke: #5FAD1B;
}

#leek-page #talent-history .ct-area {
	fill: rgba(95,173,27,1);
	fill-opacity: .2;
}
#leek-page #talent-history .ct-label.ct-horizontal {
  text-align: center;
}

#talent-history .tooltip {
	/*height: 25px;*/
}

/*
 * Caracs
 */
#specs td {
	border: none;
}

.edit-button {
	float: right;
	cursor: pointer;
	color: #aaa;
	margin: 10px 0;
}

.edit-button:hover {
	color: black;
}

#capital {
	text-align: center;
	margin-bottom: 8px;
}

#stat-popup {
	position: absolute;
	right: 10px;
	top: 70px;
}

#stat-popup div {
	display: none;
	width: 150px;
	background: white;
	padding: 5px;
	text-align: center;
}

.dashed {
	border: 5px dashed #999;
	margin: -5px;
}

.dragging {
	opacity: 0.2;
}

/*
 * Weapons
 */
#leek-weapons {
	text-align: center;
}

.popup.weapon_popup .leek-weapons,
.popup.weapon_popup .farmer-weapons {
	min-height: 80px;
}

.weapon {
	display: inline-block;
	vertical-align: bottom;
	margin: 5px;
}

.popup.weapon_popup .weapon {
	display: inline-block;
	cursor: move;
}

.popup.weapon_popup .locked,
.popup.chip_popup .locked,
.popup.ai_popup .locked {
	opacity: 0.3;
}

/*
 * Chips
 */
#leek-chips {
	text-align: center;
}

#leek-page .chip {
	display: inline-block;
	vertical-align: bottom;
	margin: 5px 3px;
}

#leek-page .chip img {
	width: 70px;
	vertical-align: bottom;
}

.popup.chip_popup .chip {
	display: inline-block;
	margin: 5px;
}

.popup.chip_popup .chip img {
	width: 70px;
}

.popup.chip_popup .leek-chips,
.popup.chip_popup .farmer-chips {
	min-height: 80px;
}

.popup.chip_popup .chip {
	display: inline-block;
	cursor: move;
}

/*
 * IA
 */
#leek-ais {
	width: 100%;
}

#leek-ai {
	text-align: center;
}

#leek-page .ai {
	display: inline-block;
	vertical-align: bottom;
	margin: 8px;
}

.ai-sheet {
	background-image: url('../image/ai.png');
	background-size: 100% 100%;
	padding: 0 14px;
	padding-top: 45px;
	width: 75px;
	height:  90px;
	position: relative;
	word-wrap: break-word;
	color: #888;
	font-size: 17px;
	font-weight: bold;
	text-align: center;
}

#ai-popup table td {
	vertical-align: top;
	padding: 5px 20px;
}

#popup-ai {
	text-align: center;
}

#ai-popup h3 {
	margin-bottom: 10px;
}

#leek-page .orange {
	color: orange;
}

.popup.ai_popup .leek-ai {
	text-align: center;
}

.popup.ai_popup .leek-ai,
.popup.ai_popup .farmer-ais {
	min-height: 80px;
}

.popup.ai_popup .ai {
	display: inline-block;
	margin: 1.9px;
	vertical-align: bottom;
	cursor: move;
}

/* */

#history .content {
	padding: 10px;
}

#tournament-history .content {
	padding: 10px;
}

.potion_popup .potion {
	display: inline-block;
	cursor: pointer;
	position: relative;
}

.potion_popup .potion img {
	width: 80px;
}

.potion_popup .potion:after {
	position: absolute;
	bottom: 0px;
	right: 0px;
	padding-top: 1px;
	height: 19px;
	padding-left: 4px;
	padding-right: 4px;
	content: attr(quantity);
	text-align: center;
	color: #eee;
	border-radius: 20px;
	font-weight: bold;
	background-color: #777;
}

.popup.hat_popup .hat {
	display: inline-block;
	vertical-align: top;
	cursor: pointer;
	text-align: center;
	margin: 3px;
	width: 125px;
	height: 90px;
}

.popup.hat_popup .hat img {
	max-height: 90px;
	max-width: 125px;
}

/*
 * Registers
 */
#registers {
	border: 1px solid #ccc;
	width: 100%;
}

#registers .register {
	font-family: monospace;
}

#registers th {
	background: white;
	font-size: 17px;
	font-weight: bold;
}

#registers td {
	background: #F8F8F8;
}

#registers td, #registers th {
	vertical-align: top;
	padding: 4px 8px;
	border: 1px solid #ccc;
}

#registers .key {
	color: #555;
	font-style: italic;
}

#registers .value {
	width: 100%;
}

#registers .delete {
	padding: 0 20px;
	background-image: url('../image/register_delete.png');
	background-position: center;
	background-repeat: no-repeat;
	background-size: contain;
	cursor: pointer;
}


/*
 * Level popup
 */
.level-popup h1 {
	margin: 0;
}

.level-popup .weapon, #level-popup .chip {
	display: inline-block;
	text-align: center;
	padding: 8px;
}

.level-popup .chip img {
	width: 80px;
}

.level-popup .function {
	padding: 4px;
}

.level-popup .available-market {
	color: #777;
	font-size: 13px;
}

.level-popup .function, .level-popup .weapon .name, .level-popup .chip .name {
	font-size: 18px;
}

.level-popup .gains {
	font-size: 18px;
}

.level-popup .gains-table td {
	padding: 5px;
}

.level-popup .gains div {
	padding: 4px;
}

.level-popup .gains div img {
	vertical-align: middle;
}

.level-popup .capital .name, .level-popup .life .name {
	color: red;
	margin-left: 6px;
}

/*
 * Count indicator
 */
.farmer-weapons .weapon, .farmer-chips .chip {
	position: relative;
}

.farmer-weapons .weapon:not([quantity='1']):before,
.farmer-chips .chip:not([quantity='1']):before {
	position: absolute;
	bottom: -5px;
	right: -5px;
	width: 20px;
	height: 20px;
	content: attr(quantity);
	text-align: center;
	color: #eee;
	border-radius: 20px;
	background-color: #0a0;
	font-weight: bold;
	padding-left: 4px;
	padding-right: 4px;
	padding-top: 1px;
}

